--- a/src/components/footer_itecnologies/Footer.css
+++ b/src/components/footer_itecnologies/Footer.css
@@ -37,15 +37,15 @@
     width: 50px;
     height: 50px;
 
-    -webkit-mask-image: url('../../assets/svg/github-icon.svg');
-    mask-image: url('../../assets/svg/github-icon.svg');
+    -webkit-mask-image: url('assets/svg/github-icon.svg');
+    mask-image: url('assets/svg/github-icon.svg');
 }
 .icon-gmail{
     width: 50px;
     height: 50px;
 
-    -webkit-mask-image: url('../../assets/svg/gmail-icon.svg');
-    mask-image: url('../../assets/svg/gmail-icon.svg');
+    -webkit-mask-image: url('assets/svg/gmail-icon.svg');
+    mask-image: url('assets/svg/gmail-icon.svg');
 }
 
 
