--- a/src/components/Main_header.css
+++ b/src/components/Main_header.css
@@ -103,6 +103,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    filter: grayscale(100%);
 }
 .container_main_title{
     position: absolute;
