--- a/src/components/pages/Pages.css
+++ b/src/components/pages/Pages.css
@@ -24,6 +24,41 @@
     }
 }
 
+@keyframes textDescriptionPrincipal {
+    from{
+        opacity: 0;
+        transform: translateY(-100px);
+    }
+    to{
+        transform: translateY(0);
+        opacity: 1;
+
+    }
+}
+
+@keyframes textDescriptionPage {
+    from{
+        opacity: 0;
+        transform: translateX(-100px);
+    }
+    to{
+        opacity: 1;
+        transform: translateX(0);
+
+    }
+}
+
+@keyframes pagesSlayerPages {
+    from{
+        opacity: 0;
+        transform: translateX(100px) scale(0.4) translateY(-750px) rotate(90deg);
+    }
+    to{
+        opacity: 1;
+        transform: translateX(0) scale(0.4) translateY(-750px) rotate(90deg);
+
+    }
+}
 
 .pages-container_principal{
     width: 100%;
@@ -41,33 +76,54 @@
 }
 
 /******************************** Description pages */
-
+.pages-description{
+    opacity: 0;
+    transform: translateY(-100px);
+}
 .pages-description_and_pages_slayer{
     width: 100%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin-top: 5rem;
 }
 .pages-description_pages{
     position: relative;
 
+    opacity: 0;
+    transform: translateX(-100px);
+
     width: 45%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+}
+.page-url{
+    padding: 1rem;
+
+    display: block;
+    width: max-content;
+    margin: auto;
+    background-color: var(--background-color-dark);
+    border: 2px solid var(--color-change) ;
+    transition: box-shadow 0.5s ease, transform 0.5s ease;
+}
+.page-url:hover{
+    transform: scale(1.1);
+    box-shadow: 0px 0px 50px var(--color-change);
+
 }
 .pages-title_text{
     text-align: center;
 }
 .pages-animation_container{
+
     transform: translateX(-40%);
     opacity: 0;
     animation: description_animation 1s ease forwards;
 }
 .pages-description_Text{
+    text-align: center;
     margin: 0 1rem;
     padding: 2rem;
-    min-height: 40rem;
+    min-height: 30rem;
 }
 
 /******************************** Pages slayer */
@@ -85,6 +141,8 @@
     box-shadow: 2px 2px 10px 1px var(--background-color);
 
     overflow: hidden;
+    opacity: 0;
+    transform: translateX(100px);
 }
 .pages-slayer_container{
     position: relative;
@@ -143,7 +201,15 @@
     transform: translateX(-40%);
     animation: description_animation2 1s ease forwards;
 }
-
+.text-description-principal{
+    animation:textDescriptionPrincipal 1s ease forwards;
+}
+.text-description-page{
+    animation:textDescriptionPage 1s ease forwards;
+}
+.pages-slayer-pages{
+    animation:pagesSlayerPages 1s ease forwards;
+}
  /*/////////////////// MEDIA QUERY //////////////////////////////*/
 
 /*****************************   desktop*/
@@ -197,12 +263,17 @@
 
 /*----------------------------- description -*/
 
+    .page-url{
+        margin-top: 2rem;
+    }
     .pages-description_and_pages_slayer{
         flex-direction: column;
         align-items: center;
     }
     .pages-description_pages{
         margin: 0;
+        height: 35rem;
+        overflow-y: auto;
     }
     .pages-description_Text{
         margin: 0;
