--- a/src/components/pages/Pages.css
+++ b/src/components/pages/Pages.css
@@ -51,12 +51,11 @@
 @keyframes pagesSlayerPages {
     from{
         opacity: 0;
-        transform: translateX(100px) scale(0.4) translateY(-750px) rotate(90deg);
+        transform: translateX(100px);
     }
     to{
         opacity: 1;
-        transform: translateX(0) scale(0.4) translateY(-750px) rotate(90deg);
-
+        transform: translateX(0);
     }
 }
 
@@ -256,6 +255,16 @@
 /***************************** movile */
 
 @media screen and (max-width:576px){
+    @keyframes pagesSlayerPages {
+        from{
+            opacity: 0;
+            transform: translateX(100px) scale(0.4) translateY(-750px) rotate(90deg);
+        }
+        to{
+            opacity: 1;
+            transform: translateX(0) scale(0.4) translateY(-750px) rotate(90deg);
+        }
+    }
 
     .pages-container_principal{
         min-height: max-content;
