--- a/src/components/footer_itecnologies/Footer.css
+++ b/src/components/footer_itecnologies/Footer.css
@@ -47,8 +47,13 @@
     -webkit-mask-image: url('svg/gmail-icon.svg');
     mask-image: url('svg/gmail-icon.svg');
 }
+.icon-linkedin{
+    width: 50px;
+    height: 50px;
 
-
+    -webkit-mask-image: url('svg/linkedin-icon.svg');
+    mask-image: url('svg/linkedin-icon.svg');
+}
 .footer-form{
     width: 500px;
     height: 400px;
