--- a/src/components/pages/Pages.css
+++ b/src/components/pages/Pages.css
@@ -119,7 +119,7 @@
     animation: description_animation 1s ease forwards;
 }
 .pages-description_Text{
-    text-align: center;
+    /* text-align: center; */
     margin: 0 1rem;
     padding: 2rem;
     min-height: 30rem;
